Iterator-based API for Cypher Gremlin client